[gd_scene format=3 uid="uid://b14g0lksq3jhy"]

[ext_resource type="Script" uid="uid://cxlckhiuu67is" path="res://assets/hud/timer.gd" id="1_n0erh"]
[ext_resource type="Texture2D" uid="uid://b6mkow8uie06e" path="res://assets/hud/TimerDigits.png" id="2_knecx"]
[ext_resource type="Texture2D" uid="uid://ikwk47q5lfch" path="res://assets/hud/TimeHUD.png" id="2_xetnf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mdejw"]
atlas = ExtResource("2_knecx")
region = Rect2(99, 0, 11, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlb65"]
atlas = ExtResource("2_knecx")
region = Rect2(112, 0, 7, 12)

[node name="Timer" type="MarginContainer" unique_id=1591319583]
offset_right = 219.0
offset_bottom = 26.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_n0erh")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=1370744086]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Digit5" type="TextureRect" parent="HBoxContainer" unique_id=1715025220]
layout_mode = 2
texture = ExtResource("2_xetnf")
expand_mode = 3

[node name="Digit" type="TextureRect" parent="HBoxContainer" unique_id=1097200004]
layout_mode = 2
texture = SubResource("AtlasTexture_mdejw")
expand_mode = 3

[node name="Digit2" type="TextureRect" parent="HBoxContainer" unique_id=649725259]
layout_mode = 2
texture = SubResource("AtlasTexture_mdejw")
expand_mode = 3

[node name="Colon" type="TextureRect" parent="HBoxContainer" unique_id=1031608949]
layout_mode = 2
texture = SubResource("AtlasTexture_mlb65")
expand_mode = 3

[node name="Digit3" type="TextureRect" parent="HBoxContainer" unique_id=332755450]
layout_mode = 2
texture = SubResource("AtlasTexture_mdejw")
expand_mode = 3

[node name="Digit4" type="TextureRect" parent="HBoxContainer" unique_id=1893487508]
layout_mode = 2
texture = SubResource("AtlasTexture_mdejw")
expand_mode = 3
